# Agentic-AI-Financial-Analyst

./: .gitignore  README.md  app.py  mcp_prompts.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: sample_holdings.csv
src/langgraphagenticai/: main.py
src/langgraphagenticai/LLMS/: openaillm.py
src/langgraphagenticai/graph/: graph_builder.py
src/langgraphagenticai/nodes/: chatbot_with_Tool_node.py
src/langgraphagenticai/portfolio_manager/: agent_runner.py  agentic_committee.py  analytics.py  constraint_validator.py  data_sources.py  decision_engine.py  evidence_builder.py  fmp_fundamentals.py  fmp_screener.py  hybrid_workflow.py  llm_allocator.py  portfolio_actions.py  portfolio_reporting.py  rebalance_engine.py  research_snapshot.py  schemas.py  scoring.py  sector_profiles.py  universe_builder.py
src/langgraphagenticai/prompts/: system_prompts.py
src/langgraphagenticai/tools/: analyst_tools.py  calendar_tools.py  company_overview_tools.py  directory_tools.py  earnings_transcript_tools.py  esg_tools.py  finance_tool_registry.py  financial_statement_tools.py  fmp_mcp_client.py  news_chat_tools.py  news_pipeline_tools.py  news_tools.py  price_data_tools.py  research_bundle_tools.py  search_tool.py  valuation_tools.py
src/langgraphagenticai/ui/: ai_portfolio_manager_tab.py  equity_report_tab.py  portfolio_optimizer_tab.py  stock_screener_tab.py  uiconfigfile.ini  uiconfigfile.py
src/langgraphagenticai/utils/: app_health.py  formatters.py  logging_utils.py  (+1 more)
tests/: test_formatters.py  test_response_cleaner.py
(+18 files in other folders)
